fix: align central container header with chat header

--- a/virtual-event/src/styles/Chat/ChannelHeader/ChannelHeader.layout.scss
+++ b/virtual-event/src/styles/Chat/ChannelHeader/ChannelHeader.layout.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 8px;
-  max-height: 56px;
+  max-height: 61px;
   box-sizing: border-box;
 
   .channel-header-close-button {
