--- a/virtual-event/src/styles/RoomVideo.scss
+++ b/virtual-event/src/styles/RoomVideo.scss
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: space-between;
 
-    height: 46px;
+    height: 61px;
     padding: 0 8px 0 16px;
     color: $white;
 
