--- a/virtual-event/src/styles/RoomsList.scss
+++ b/virtual-event/src/styles/RoomsList.scss
@@ -4,7 +4,7 @@
   &-container {
     display: flex;
     flex-direction: column;
-    height: calc(100% - 57px);
+    height: calc(100% - 56px);
     background: $stroke;
     transition: background 1s;
     overflow: scroll;
@@ -21,6 +21,7 @@
   }
 
   &-header {
+    height: 61px;
     display: flex;
     background: $app-canvas;
     transition: background 1s;
@@ -71,7 +72,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: calc(100% - 57px);
+    height: calc(100% - 56px);
 
     &-hidden {
       display: none;
